--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <link rel="stylesheet" href="main.css">
 
         <title>Orlando Vargas</title>
     </head>
@@ -21,38 +22,48 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"></a>
+                    <a class="navbar-brand" href="#">Orlando</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Hi</a></li>
-                        <li><a href="#">hello</a></li>
-                        <li><a href="#">hi</a></li>
+                        <li><a href="#">Me</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">About</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <!-- Jumbotron -->
         <div class="jumbotron text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
                         <img src="" class="img-circle" alt="">
-                        
+
+
                     </div>
                 </div>
             </div>
         </div>
 
+        <!-- Body of my site -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-4">
-
+                <div class="col-sm-2 bg-color-gray">
+                    column 1
                 </div>
                 <div class="col-sm-6">
-
+                    column 2
+                </div>
+                <div class="col-sm-4">
+                    column 3
                 </div>
             </div>
         </div>
+        <div class="container-fluid">
+
+        </div>
+
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
