--- a/index.html
+++ b/index.html
@@ -14,10 +14,27 @@
     </head>
     <body>
         <!-- Navbar -->
-        <nav class="navbar navbar navbar-fixed-top">
+        <nab class="navbar navbar-dark bg-dark navbar-expand-sm ">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarSupportContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-item" href="#">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        Porfolio
+                    </li>
+                </ul>
+            </div>
+        </nab>
+        <!--nav class="navbar navbar-expand-lg bh-light">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <button class="collapse navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -32,7 +49,7 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav -->
         <!-- Jumbotron -->
         <div class="jumbotron text-center">
             <div class="container">
@@ -47,7 +64,7 @@
         </div>
 
         <!-- Body of my site -->
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-2 bg-color-gray">
                     column 1
