--- a/index.html
+++ b/index.html
@@ -14,23 +14,38 @@
     </head>
     <body>
         <!-- Navbar -->
-        <nab class="navbar navbar-dark bg-dark navbar-expand-sm ">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-sm ">
+            <a class="navbar-brand" href="#">Orlando Vargas</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             
             <div class="collapse navbar-collapse" id="navbarSupportContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-item" href="#">Home<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-item" href="#">Me<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        Porfolio
+                        Experience
+                    </li>
+                    <li class="nav-item">
+                        Projects
+                    </li>
+                    <li class="nav-item">
+                        Skills
+                    </li>
+                    <li class="nav-item">
+                        Education
+                    </li>
+                    <li>
+                        Contact
+                    </li>
+                    <li class="nav-item">
+                        Resume
                     </li>
                 </ul>
             </div>
-        </nab>
+        </nav>
         <!-- Jumbotron -->
         <div class="jumbotron text-center">
             <div class="container">
@@ -57,9 +72,10 @@
                     column 3
                 </div>
             </div>
-        </div>
-        <div class="container-fluid">
-
+            <div class="row">
+                <div class="col-sm-12">
+                </div>
+            </div>
         </div>
 
 
