--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            
+
+            <!-- Navbar list of items --> 
             <div class="collapse navbar-collapse" id="navbarSupportContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -52,7 +53,6 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <img src="" class="img-circle" alt="">
-
 
                     </div>
                 </div>
