--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <!-- Navbar -->
         <nav class="navbar navbar-dark bg-dark navbar-expand-sm ">
-            <a class="navbar-brand" href="#">Orlando Vargas</a>
+            <a class="navbar-brand" href="#">OV</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -53,6 +53,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <img src="" class="img-circle" alt="">
+                        <h1>Orlando Vargas</h1>
 
                     </div>
                 </div>
@@ -62,18 +63,39 @@
         <!-- Body of my site -->
         <div class="container">
             <div class="row">
-                <div class="col-sm-2 bg-color-gray">
-                    column 1
+                <!-- Experience Row -->
+                <div class="col-sm-12">
+                    <h2>Experience</h2>
                 </div>
-                <div class="col-sm-6">
-                    column 2
-                </div>
-                <div class="col-sm-4">
-                    column 3
+            </div>
+            <div class="row">
+                <!-- Projects Row -->
+                <div class="col-sm-12">
+                    <h2>Projects</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
+                    <h2>Skills</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>Education</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <h2>Contact</h2>
+                    <div class="form-row">
+                        <div class="form-group col-sm-6">
+                            <label for="inputName">Name</label>
+                            <input type"name" class="form-control" id="inputName" placeholder="Name">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <h2>Resume</h2>
                 </div>
             </div>
         </div>
