--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
                 </div>
             </div>
             <div class="row">
+            
+            </div>
+            <div class="row">
                 <div class="col-sm-8">
                     <h2>Contact</h2>
                     <div class="form-row">
